--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -4,7 +4,7 @@
 
         <ul>
             {% gimme navigation with { navigationName: "footerPrim" } %}
-                <li>{{ contentList.name }}</li> <!-- Content list name -->
+                <li>{{ navigation.name }}</li> <!-- Content list name -->
             {% endgimme %} </ul>
     </div>
 
