--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -3,7 +3,7 @@
     <div class="categoryItems col-12 col-sm-10 d-none d-sm-block">
 
         <ul>
-            {% gimme navigation with { navigationName: "footerPrim" } %}
+            {% gimme navigation %}
                 <li>{{ navigation.name }}</li> <!-- Content list name -->
             {% endgimme %} </ul>
     </div>
