--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -3,8 +3,8 @@
     <div class="categoryItems col-12 col-sm-10 d-none d-sm-block">
 
         <ul>
-            {% gimme navigation %}
-                <li>{{ navigation.name }}</li> <!-- Content list name -->
+            {% gimme contentList %}
+                <li>{{ contentList.name }}</li> <!-- Content list name -->
             {% endgimme %} </ul>
     </div>
 
