--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -3,9 +3,8 @@
     <div class="categoryItems col-12 col-sm-10 d-none d-sm-block">
 
         <ul>
-            {% gimme contentList %}
-                <li>{{ contentList.name }}</li> <!-- Content list name -->
-            {% endgimme %} </ul>
+            {% gimmelist route from routes %} <li>{{ route.name }}
+                {% endgimme %} </ul>
     </div>
 
 </div>
