--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -2,6 +2,9 @@
 
     <div class="categoryItems col-12 col-sm-10 d-none d-sm-block">
 
+        <ul>
+            {% gimme route  %} <li>{{ route.name }}</li> <!-- Route's name -->
+            {% endgimme %} </ul>
 
     </div>
 
