--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -3,7 +3,7 @@
     <div class="categoryItems col-12 col-sm-10 d-none d-sm-block">
 
         <ul>
-            {% gimme route  %} <li>{{ route.name }}</li> <!-- Route's name -->
+            {% gimme route with { parent: 1} %} <li>{{ route.name }}</li> <!-- Route's name -->
             {% endgimme %} </ul>
 
     </div>
