--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -3,7 +3,7 @@
     <div class="categoryItems col-12 col-sm-10 d-none d-sm-block">
 
         <ul>
-            {% gimmelist route from routes with {parent: 1} %}
+            {% gimmelist route from routes with {parent: "Agbs"} %}
 <li>{{ route.name }}
                 {% endgimmelist %} </ul>
 
