--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -4,8 +4,9 @@
 
         <ul>
             {% gimmelist route from routes with {parent: "Agbs"} %}
-<li>{{ route.name }}
-                {% endgimmelist %} </ul>
+                <li>{{ route.name }}</li>
+                {% endgimmelist %}
+        </ul>
 
     </div>
 
