--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row secRoutes">
 
     <div class="categoryItems col-12 col-sm-10 d-none d-sm-block">
 
@@ -13,6 +13,11 @@
 </div>
 
 
-{#<ul>#}
-{#    {% gimmelist item from contentListItems with { parent: "Agbs" } %} <li>{{ item.name }}</li> <!-- Article title -->#}
-{#</ul>#}
+<style>
+
+    .secRoutes{
+        background-color: red;
+    }
+
+
+</style>
