--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -1,4 +1,4 @@
-<div class="row secRoutes">
+<div class="secRoutes">
 
     <div class="categoryItems col-12 col-sm-10 d-none d-sm-block">
 
@@ -16,8 +16,12 @@
 <style>
 
     .secRoutes{
-        position: absolute;
+        position: fixed;
+        left: 0;
+        bottom: 0;
         width: 100%;
+        background: #212126;
+        padding: 15px 0;
     }
 
     ul#secLine li {
