--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -16,9 +16,8 @@
 <style>
 
     .secRoutes{
-        position: fixed;
+        position: absolute;
         left: 0;
-        bottom: 0;
         width: 100%;
         background: #212126;
         padding: 15px 0;
