--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -28,7 +28,7 @@
 <style>
 
     .ml-auto {
-        margin-left: 0;
+        margin-left: 0!important;
     }
     .secRoutes{
         position: absolute;
