--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -2,7 +2,7 @@
 <div class="secRoutes">
 
 
-    <div class="d-flex">
+    <div class="col-12 d-flex">
         <div class="p-2">
 
             <div class="categoryItems col-12 col-sm-10 d-none d-sm-block">
@@ -28,7 +28,11 @@
 <style>
 
     li#routeItem {
-        margin:0 0 10px 0;
+        font-size: 1.4rem;
+        opacity: .5;
+        display: inline-block;
+        width: auto;
+        margin-right: 20px;
     }
 
     .ml-auto {
