--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -18,7 +18,7 @@
         </div>
 
 
-        <div class="ml-auto p-2">Copyright something</div>
+        <p class="footer__text col-sm-4 col-md-4 col-xs-12">Copyright something</p>
     </div>
 
     
@@ -26,6 +26,12 @@
 
 
 <style>
+
+    .footer__text{
+        font-size: 1.4rem;
+        text-align: left;
+        margin: 5px 0;
+    }
 
     li#routeItem {
         font-size: 1.4rem;
