--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -1,6 +1,7 @@
 
 <div class="secRoutes">
 
+    <div class="row">
 
     <div class="col-12 d-flex">
         <div class="p-2">
@@ -21,7 +22,7 @@
         <p class="footer__text col-sm-4 col-md-4 col-xs-12">Copyright something</p>
     </div>
 
-    
+    </div>
 </div>
 
 
