--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -46,6 +46,11 @@
 
 <style>
 
+    .footer .footer__bottom {
+        background: #212126;
+        padding: 15px 0;
+    }
+
     .footer__text{
         font-size: 1.4rem;
         text-align: left;
