--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -51,6 +51,11 @@
         padding: 15px 0;
     }
 
+    .container, .container-fluid {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
     .footer__text{
         font-size: 1.4rem;
         text-align: left;
