--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -1,26 +1,22 @@
 <div class="footer__bottom">
     <div class="container">
         <div class="row">
+
             <nav class="staticNav col-sm-8 col-md-8 col-xs-12" role="navigation">
-                <ul>
-                    <li class="first"> <a href="/uslovi-koriscenja">Uslovi korišćenja</a>
-                    </li>
-                    <li> <a href="/pravila-komentarisanja">Pravila komentarisanja i registracija</a>
-                    </li>
-                    <li> <a href="/impressum">Impressum</a>
-                    </li>
-                    <li> <a href="/kontakt">Kontakt</a>
-                    </li>
-                    <li> <a href="/marketing">Marketing</a>
-                    </li>
-                    <li class="last"> <a href="/pisi-ombudsmanu">Piši ombudsmanu</a>
-                    </li>
+
+                <ul id="secLine" class="d-flex justify-content-around">
+                    {% gimmelist route from routes with {parent: "Agbs"} %}
+                        <li id="routeItem">{{ route.name }}</li>
+                    {% endgimmelist %}
                 </ul>
             </nav>
             <p class="footer__text col-sm-4 col-md-4 col-xs-12">© 2019 Vijesti All Rights Reserved</p>
+
+
         </div>
     </div>
 </div>
+
 
 
 {#    <div class="col-12 d-flex">#}
@@ -43,7 +39,6 @@
 {#    </div>#}
 
 
-
 <style>
 
     .footer .footer__bottom {
@@ -56,7 +51,7 @@
         padding-left: 15px;
     }
 
-    .footer__text{
+    .footer__text {
         font-size: 1.4rem;
         text-align: left;
         margin: 5px 0;
@@ -71,9 +66,10 @@
     }
 
     .ml-auto {
-        margin-left: 0!important;
+        margin-left: 0 !important;
     }
-    .secRoutes{
+
+    .secRoutes {
         position: absolute;
         left: 0;
         width: 100%;
