--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -40,7 +40,11 @@
 
 
 <style>
-
+    .staticNav ul {
+        padding-left: 0;
+        margin: 5px 0;
+        list-style: none;
+    }
     .footer .footer__bottom {
         background: #212126;
         padding: 15px 0;
