--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -40,6 +40,14 @@
 
 
 <style>
+
+    @media (min-width: 768px){
+        .footer .footer__text {
+            text-align: right;
+        }
+    }
+
+
     .staticNav ul {
         padding-left: 0;
         margin: 5px 0;
