--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -10,7 +10,7 @@
                     {% endgimmelist %}
                 </ul>
             </nav>
-            <p class="footer__text col-sm-4 col-md-4 col-xs-12">© 2019 Vijesti All Rights Reserved</p>
+            <p class="footer__text col-sm-4 col-md-4 col-xs-12">© 2019 BildFrau All Rights Reserved</p>
 
 
         </div>
