--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -1,5 +1,5 @@
 <div class="secRoutes">
-    <div class="container">
+    <div class="container" style="background: #212126;">
         <div class="row">
 
             <nav class="staticNav col-sm-8 col-md-8 col-xs-12" role="navigation">
