--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -6,7 +6,7 @@
 
                 <ul id="secLine" class="d-flex justify-content-around">
                     {% gimmelist route from routes with {parent: "Agbs"} %}
-                        <li id="routeItem">{{ route.name }}</li>
+                        <li id="routeItem">{{ url(route) }}</li>
                     {% endgimmelist %}
                 </ul>
             </nav>
