--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -25,25 +25,6 @@
 </div>
 
 
-{#    <div class="col-12 d-flex">#}
-{#        <div class="p-2">#}
-
-{#            <div class="categoryItems col-12 col-sm-10 d-none d-sm-block">#}
-
-{#                <ul id="secLine" class="d-flex justify-content-around">#}
-{#                    {% gimmelist route from routes with {parent: "Agbs"} %}#}
-{#                        <li id="routeItem">{{ route.name }}</li>#}
-{#                    {% endgimmelist %}#}
-{#                </ul>#}
-
-{#            </div>#}
-
-{#        </div>#}
-
-
-{#        <p class="footer__text col-sm-4 col-md-4 col-xs-12">Copyright something</p>#}
-{#    </div>#}
-
 
 <style>
 
@@ -84,8 +65,8 @@
         margin-right: 20px;
     }
 
-    .ml-auto {
-        margin-left: 0 !important;
+    #routeItem a:hover {
+        color: #dfdfdf;
     }
 
     .secRoutes {
