--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -63,9 +63,13 @@
         display: inline-block;
         width: auto;
         margin-right: 20px;
+
+        clear: both;
+        overflow: hidden;
+        white-space: nowrap;
     }
 
-    #routeItem a:hover {
+    li#routeItem a:hover {
         color: #dfdfdf;
     }
 
