--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -62,14 +62,13 @@
         opacity: .5;
         display: inline-block;
         width: auto;
-        margin-right: 20px;
 
         clear: both;
         overflow: hidden;
         white-space: nowrap;
     }
 
-    li#routeItem a:hover {
+    li#routeItem:hover a {
         color: #dfdfdf;
     }
 
