--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -68,8 +68,8 @@
         white-space: nowrap;
     }
 
-    li#routeItem:hover li{
-        color: #dfdfdf;
+    li#routeItem:hover a{
+        color: red;
     }
 
     .secRoutes {
