--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -68,6 +68,10 @@
         white-space: nowrap;
     }
 
+    li#routeItem a{
+        background-color: transparent;
+    }
+
     li#routeItem:hover a{
         color: #FFFFFF;
     }
