--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -72,7 +72,7 @@
         background-color: transparent;
     }
 
-    li#routeItem:hover{
+    li#routeItem:hover a{
         color: #FFFFFF;
     }
 
