--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -32,7 +32,11 @@
         .footer .footer__text {
             text-align: right;
         }
-    }
+
+        li#routeItem {
+
+            padding-right: 5px;
+        }
 
 
     .staticNav ul {
