--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -45,6 +45,14 @@
         list-style: none;
     }
 
+    .staticNav ul li {
+        font-size: 1.4rem;
+        opacity: .5;
+        display: inline-block;
+        width: auto;
+        margin-right: 20px;
+    }
+
     .footer .footer__bottom {
         background: #212126;
         padding: 15px 0;
