--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set version = '1559305671472' %}
+{% set version = '1559305764100' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -252,7 +252,7 @@
 
     </div>
 
-    {{ include('widgets/footerSec.html.twig') }}
+    {{ include('widgets/inc/footerSec.html.twig') }}
 
   </footer>
 
