--- a/views/widgets/inc/searchBox.html.twig
+++ b/views/widgets/inc/searchBox.html.twig
@@ -5,5 +5,7 @@
       <button type="submit">Submit</button>
     </form-->
 
+    {% dump searchResults %}
+
     <gcse:searchbox-only></gcse:searchbox-only>
 </div>
