--- a/views/widgets/inc/searchBox.html.twig
+++ b/views/widgets/inc/searchBox.html.twig
@@ -5,6 +5,12 @@
       <button type="submit">Submit</button>
     </form-->
 
+    <form name="filter" method="get">
+        <input type="search" id="filter_search" name="q">
+        <button type="submit">Submit</button>
+
+    </form>
+
     {% dump searchResults %}
 
     <gcse:searchbox-only></gcse:searchbox-only>
