--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set version = '1559547848854' %}
+{% set version = '1559547889121' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -169,7 +169,7 @@
         </div>
         {% endblock %}
 
-        {{ include('widgets/inc/searchBox.html.twig') }}
+{#        {{ include('widgets/inc/searchBox.html.twig') }}#}
 
         
       </div>
