--- a/views/widgets/inc/searchBox.html.twig
+++ b/views/widgets/inc/searchBox.html.twig
@@ -13,5 +13,5 @@
 
     {% dump searchResults %}
 
-    <gcse:searchbox-only></gcse:searchbox-only>
+{#    <gcse:searchbox-only></gcse:searchbox-only>#}
 </div>
