--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -2,6 +2,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+
 	{% dump searchResults %}
 
 	<main class="container">
@@ -10,19 +11,46 @@
 
 
 
+				<form name="filter" method="get">
+					<input type="search" id="filter_search" name="q">
+				</form>
+				{% set itemsPerPage, currentPage = 8, app.request.get('page', 1) %} {% set start = ((currentPage - 1) * itemsPerPage) %}
+				{% gimmelist article from searchResults|limit(app.request.get('limit', ˓→10))|order(app.request.get('field', 'publishedAt'), app.request.get( ˓→'direction', 'desc')) with {
+					term: app.request.get('q', ''),
+					page: app.request.get('page', 1),
+					routes: app.request.get('route', []),
+					term: app.request.get('q', ''),
+					publishedBefore: app.request.get('publishedBefore'),
+					publishedAfter: app.request.get('publishedAfter'),
+					publishedAt: app.request.get('publishedAt'),
+					sources: app.request.get('source', []),
+					authors: app.request.get('author', []),
+					statuses: app.request.get('status', []),
+					metadata: app.request.get('metadata', []),
+					} %}
+					<h4>{{ article.title }}</h4> <p>{{ article.lead }}</p>
+				{% if loop.last %}
+				{% include '_tpl/pagination.html.twig' with { currentFilters: {}|merge(app.request.query.all()), currentPage: currentPage,
+					paginationPath: gimme.route,
+					lastPage: (loop.totalLength/itemsPerPage)|round(0, 'ceil') } only %}
+				Showing {{ searchResults|length }} out of {{ loop.totalLength }} articles. {% endif %}
+				{% endgimmelist %}
+				<a href="search?route[]=50">Business</a>
+				<a href="search?route[]=49">Politics</a>
 
-<script>
-  (function() {
-    var cx = '001959388472599317396:kn-x-ndaexq';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
-<gcse:searchresults-only></gcse:searchresults-only>
+
+{#<script>#}
+{#  (function() {#}
+{#    var cx = '001959388472599317396:kn-x-ndaexq';#}
+{#    var gcse = document.createElement('script');#}
+{#    gcse.type = 'text/javascript';#}
+{#    gcse.async = true;#}
+{#    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;#}
+{#    var s = document.getElementsByTagName('script')[0];#}
+{#    s.parentNode.insertBefore(gcse, s);#}
+{#  })();#}
+{#</script>#}
+{#<gcse:searchresults-only></gcse:searchresults-only>#}
 
 			</div>
 		</div>
