--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -30,9 +30,9 @@
 					} %}
 					<h4>{{ article.title }}</h4> <p>{{ article.lead }}</p>
 				{% if loop.last %}
-				{% include '_tpl/pagination.html.twig' with { currentFilters: {}|merge(app.request.query.all()), currentPage: currentPage,
-					paginationPath: gimme.route,
-					lastPage: (loop.totalLength/itemsPerPage)|round(0, 'ceil') } only %}
+{#				{% include '_tpl/pagination.html.twig' with { currentFilters: {}|merge(app.request.query.all()), currentPage: currentPage,#}
+{#					paginationPath: gimme.route,#}
+{#					lastPage: (loop.totalLength/itemsPerPage)|round(0, 'ceil') } only %}#}
 				Showing {{ searchResults|length }} out of {{ loop.totalLength }} articles. {% endif %}
 				{% endgimmelist %}
 				<a href="search?route[]=50">Business</a>
