--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -27,7 +27,24 @@
 					} %}
 
 					<ul class="list-group list-group-flush">
-						<li class="list-group-item">{{ article.title }}</li>
+
+						<div class="row">
+							<div class="col-sm-8">
+
+								<li class="list-group-item">{{ article.title }}</li>
+
+
+							</div>
+
+							<div class="col-sm-4">
+
+								<img src="https://via.placeholder.com/150" class="rounded float-right" alt="...">
+
+
+							</div>
+
+						</div>
+
 					</ul>
 
 
