--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -9,7 +9,6 @@
 		<div class="row">
 			<div class="article article--noMargin col-md-9 col-sm-12 col-xs-12">
 
-				{% dump searchResults %}
 
 				{% set itemsPerPage, currentPage = 8, app.request.get('page', 1) %} {% set start = ((currentPage - 1) * itemsPerPage) %}
 				{% gimmelist article from searchResults|limit(app.request.get('limit', 10))|order(app.request.get('field', 'publishedAt'), app.request.get('direction', 'desc')) with {
@@ -26,6 +25,9 @@
 					metadata: app.request.get('metadata', []),
 					} %}
 
+				{% dump article %}
+
+
 					<ul class="list-group list-group-flush">
 
 
@@ -33,8 +35,11 @@
 
 
 
+						<figure>
+							<img src="https://via.placeholder.com/150" alt="The Pulpit Rock"  class="rounded float-right" width="304" height="228">
+						</figure>
 
-								<img src="https://via.placeholder.com/150" class="rounded float-right" alt="...">
+
 
 
 
