--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -7,7 +7,6 @@
 
 	<main class="container">
 		<div class="row">
-			<div class="article article--noMargin col-md-9 col-sm-12 col-xs-12">
 
 
 				{% set itemsPerPage, currentPage = 8, app.request.get('page', 1) %} {% set start = ((currentPage - 1) * itemsPerPage) %}
@@ -28,23 +27,24 @@
 				{% dump article %}
 
 
-					<ul class="list-group list-group-flush">
 
 
-								<li class="list-group-item">{{ article.title }}</li>
+					<div class="col-md-6">
+						<div class="card flex-md-row mb-4 shadow-sm h-md-250">
+							<div class="card-body d-flex flex-column align-items-start">
+								<strong class="d-inline-block mb-2 text-primary">World</strong>
+								<h3 class="mb-0">
+									<a class="text-dark" href="#">{{ article.title }}</a>
+								</h3>
+								<div class="mb-1 text-muted">Nov 12</div>
+								<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+								<a href="#">Continue reading</a>
+							</div>
+							<img class="card-img-right flex-auto d-none d-lg-block" data-src="https://via.placeholder.com/150" alt="Card image cap">
+						</div>
+					</div>
 
-
-
-						<figure>
-							<img src="https://via.placeholder.com/150" alt="The Pulpit Rock"  class="rounded float-right" width="304" height="228">
-						</figure>
-
-
-
-
-
-
-					</ul>
+				</div>
 
 
 
