--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -40,7 +40,7 @@
 								<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
 								<a href="#">Continue reading</a>
 							</div>
-							<img class="card-img-right flex-auto d-none d-lg-block" data-src="https://via.placeholder.com/150" alt="Card image cap">
+							<img class="card-img-right flex-auto d-none d-lg-block" src="https://via.placeholder.com/150" alt="Card image cap">
 						</div>
 					</div>
 
