--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -29,6 +29,8 @@
 
 
 					<div class="col-md-12">
+
+
 						<div class="card flex-md-row mb-4 shadow-sm h-md-250">
 							<div class="card-body d-flex flex-column align-items-start">
 								<strong class="d-inline-block mb-2 text-primary">World</strong>
@@ -36,7 +38,7 @@
 									<a class="text-dark" href="#">{{ article.title }}</a>
 								</h3>
 								<div class="mb-1 text-muted">Nov 12</div>
-								<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+								<p class="card-text mb-auto">{{ article.body }} </p>
 								<a href="#">Continue reading</a>
 							</div>
 							<img class="card-img-right flex-auto d-none d-lg-block" src="https://via.placeholder.com/150" alt="Card image cap">
