--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -33,7 +33,7 @@
 
 						<div class="card flex-md-row mb-4 shadow-sm h-md-250">
 							<div class="card-body d-flex flex-column align-items-start">
-								<strong class="d-inline-block mb-2 text-primary">World</strong>
+								<strong class="d-inline-block mb-2 text-primary">{{ article.route.name }}</strong>
 								<h3 class="mb-0">
 									<a class="text-dark" href="#">{{ article.title }}</a>
 								</h3>
