--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -36,7 +36,7 @@
 									<a class="text-dark" href="#">{{ article.title }}</a>
 								</h3>
 								<div class="mb-1 text-muted">Nov 12</div>
-								<p class="card-text mb-auto">{{ article.body }} </p>
+								<p class="card-text mb-auto">text here </p>
 								<a href="#">Continue reading</a>
 							</div>
 							<img class="card-img-right flex-auto d-none d-lg-block" src="https://via.placeholder.com/150" alt="Card image cap">
