--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -29,7 +29,7 @@
 
 
 					<div class="col-md-12">
-						<div class="card flex-md-row mb-4 shadow-sm h-md-250">
+						<div class="card flex-md-row mb-4 shadow-sm h-md-250 border-left-0 border-top-0 border-right-0">
 							<div class="card-body d-flex flex-column align-items-start">
 								<strong class="d-inline-block mb-2 text-primary">{{ article.route.name }}</strong>
 								<h3 class="mb-0">
@@ -39,7 +39,11 @@
 								<p class="card-text mb-auto">text here </p>
 								<a href="#">Continue reading</a>
 							</div>
-							<img class="card-img-right flex-auto d-none d-lg-block" src="https://via.placeholder.com/150" alt="Card image cap">
+
+							<div class="col text-center justify-content-center align-self-center">
+								<img class="card-img-right flex-auto d-none d-lg-block" src="https://via.placeholder.com/150" alt="Card image cap">
+							</div>
+
 						</div>
 					</div>
 
