--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -40,8 +40,8 @@
 								<a href="#">Continue reading</a>
 							</div>
 
-							<div class="col text-center justify-content-center align-self-center rounded float-right">
-								<img class="card-img-right flex-auto d-none d-lg-block" src="https://via.placeholder.com/150" alt="Card image cap">
+							<div class="col text-center justify-content-center align-self-center">
+								<img class="card-img-right flex-auto d-none d-lg-block rounded float-right" src="https://via.placeholder.com/150" alt="Card image cap">
 							</div>
 
 						</div>
