--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -28,7 +28,7 @@
 
 
 
-					<div class="col-md-8">
+					<div class="col-md-8 col-centered">
 						<div class="card flex-md-row mb-4 shadow-sm h-md-250 border-left-0 border-top-0 border-right-0">
 							<div class="card-body d-flex flex-column align-items-start">
 								<strong class="d-inline-block mb-2 text-primary">{{ article.route.name }}</strong>
@@ -40,9 +40,7 @@
 								<a href="#">Continue reading</a>
 							</div>
 
-							<div class="text-center justify-content-center align-self-center">
 								<img class="card-img-right flex-auto d-none d-lg-block rounded float-right" src="https://via.placeholder.com/150" alt="Card image cap">
-							</div>
 
 						</div>
 					</div>
@@ -77,3 +75,14 @@
 	</main>
 
 {% endblock %}
+
+
+<style>
+
+	.col-centered {
+		float: none;
+		margin: 0 auto;
+	}
+
+
+</style>
