--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -40,8 +40,10 @@
 								<a href="#">Continue reading</a>
 							</div>
 
-								<img class="card-img-right flex-auto d-none d-lg-block rounded float-right" src="https://via.placeholder.com/150" alt="Card image cap">
+							<div class="col d-flex align-items-center justify-content-center">
 
+								<img class="card-img-right flex-auto d-none d-lg-block rounded float-right" src="https://via.placeholder.com/150" alt="Card image cap">
+							</div>
 						</div>
 					</div>
 
@@ -79,6 +81,20 @@
 		.col-centered {
 			float: none;
 			margin: 0 auto;
+		}
+
+		.article-img {
+			position: absolute;
+			top: 0;
+			right: 12px;
+			bottom: 0;
+			width: 17%;
+			margin: auto;
+		}
+
+		.hed {
+			max-width: 605px;
+			position: absolute;
 		}
 
 
