--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -40,7 +40,7 @@
 								<a href="#">Continue reading</a>
 							</div>
 
-							<div class="col d-flex align-items-center justify-content-center">
+							<div class="d-flex align-items-center justify-content-center">
 
 								<img class="card-img-right flex-auto d-none d-lg-block rounded float-right" src="https://via.placeholder.com/150" alt="Card image cap">
 							</div>
