--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -40,9 +40,9 @@
 								<a href="#">Continue reading</a>
 							</div>
 
-							<div class="d-flex align-items-center justify-content-center">
+							<div class="col-md-4 px-0 align-items-center justify-content-center">
 
-								<img class="card-img-right flex-auto d-none d-lg-block rounded float-right" src="https://via.placeholder.com/150" alt="Card image cap">
+								<img class="img-fluid" src="https://via.placeholder.com/150" alt="Card image cap">
 							</div>
 						</div>
 					</div>
