--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -33,14 +33,14 @@
 							<div class="card-body d-flex flex-column align-items-start">
 								<strong class="d-inline-block mb-2 text-primary">{{ article.route.name }}</strong>
 								<h3 class="mb-0">
-									<a class="text-dark" href="#">{{ article.title }}</a>
+									<a class="text-dark" href="{{ url(article) }}">{{ article.title }}</a>
 								</h3>
 								<div class="mb-1 text-muted">Nov 12</div>
 								<p class="card-text mb-auto">text here </p>
 								<a href="#">Continue reading</a>
 							</div>
 
-							<div class="col-md-4 px-0 align-items-center justify-content-center">
+							<div class="col-md-3 px-10 align-items-center justify-content-center">
 
 								<img class="img-fluid" src="https://via.placeholder.com/150" alt="Card image cap">
 							</div>
