--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -42,7 +42,23 @@
 
 							<div class="col-md-3 px-10 align-items-center justify-content-center">
 
-								<img class="img-fluid" src="https://via.placeholder.com/150" alt="Card image cap">
+
+
+								{% if gimme.article.featureMedia %}
+									{% gimme rendition with { 'media': gimme.article.featureMedia, 'name': '1250x600', 'fallback': 'original' } %}
+										{% set rend1250 = path(rendition) %}
+										{% set imgCaption = gimme.article.featureMedia.description %}
+									{% endgimme %}
+								{% endif %}
+
+								{% gimme rendition with { 'name': '1250x600', 'fallback': 'original' } %}
+									{% set rend1250 = path(rendition) %}
+								{% endgimme %}
+
+								<img  class="img-fluid" src="{{ rend1250 }}" alt="{{ imgCaption }}" width="230" height="150" }}" />
+								<figcaption>{{ imgCaption }}</figcaption>
+
+
 							</div>
 						</div>
 					</div>
