--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -54,6 +54,8 @@
 								{% gimme rendition with { 'name': '1250x600', 'fallback': 'original' } %}
 									{% set rend1250 = path(rendition) %}
 
+								{% dump rend1250 %}
+
 
 									<img  class="img-fluid" src="{{ rend1250 }}" alt="{{ imgCaption }}" width="230" height="150" }}" />
 									<figcaption>{{ imgCaption }}</figcaption>
