--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -46,6 +46,8 @@
 
 								{% if article.featureMedia %}
 									{% gimme rendition with { 'media': article.featureMedia, 'name': '1250x600', 'fallback': 'original' } %}
+									{% dump path(rendition) %}
+
 										{% set rend1250 = path(rendition) %}
 										{% set imgCaption = article.featureMedia.description %}
 									{% endgimme %}
@@ -54,7 +56,6 @@
 								{% gimme rendition with { 'name': '1250x600', 'fallback': 'original' } %}
 									{% set rend1250 = path(rendition) %}
 
-								{% dump rend1250 %}
 
 
 									<img  class="img-fluid" src="{{ rend1250 }}" alt="{{ imgCaption }}" width="230" height="150" }}" />
