--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -35,7 +35,18 @@
 								</h3>
 								<div class="mb-1 text-muted">Nov 12</div>
 								<p class="card-text mb-auto">text here </p>
-								<p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
+
+
+								{% for author in gimme.article.authors %}
+
+									<p class="blog-post-meta">January 1, 2014 by <a href="{{ url('Authors', { 'authorSlug' : author.slug }) }}">{{ author.name }}</a></p>
+
+
+								{% endfor %}
+
+
+
+
 							</div>
 
 							<div class="col-md-3 px-10 align-items-center justify-content-center">
