--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -33,13 +33,12 @@
 								<h3 class="mb-0">
 									<a class="text-dark" href="{{ url(article) }}">{{ article.title }}</a>
 								</h3>
-								<div class="mb-1 text-muted">Nov 12</div>
 								<p class="card-text mb-auto">text here </p>
 
 
 								{% for author in gimme.article.authors %}
 
-									<p class="blog-post-meta">January 1, 2014 by <a href="{{ url('Authors', { 'authorSlug' : author.slug }) }}">{{ author.name }}</a></p>
+									<p class="mb-1 text-muted blog-post-meta">January 1, 2014 by <a href="{{ url('Authors', { 'authorSlug' : author.slug }) }}">{{ author.name }}</a></p>
 
 
 								{% endfor %}
