--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -68,7 +68,7 @@
 
 
             {% if loop.last %}
-                {% include 'inc/pagination.html.twig' with { currentFilters: {}|merge(app.request.query.all()), currentPage: currentPage,
+                {% include 'widgets/inc/pagination.html.twig' with { currentFilters: {}|merge(app.request.query.all()), currentPage: currentPage,
                     paginationPath: gimme.route,
                     lastPage: (loop.totalLength/itemsPerPage)|round(0, 'ceil') } only %}
                 Showing {{ searchResults|length }} out of {{ loop.totalLength }} articles.
