--- a/views/widgets/inc/pagination.html.twig
+++ b/views/widgets/inc/pagination.html.twig
@@ -1,43 +1,65 @@
 {#
-    Parameters:
-      * nbPages (int): number of pages
-      * currentPage (int): current pages
-      * url (string): route name & query (string): route parameter
-        ex: list/page-5?q=myFilter (5 = page and query = myFilter)
+  Source: http://dev.dbl-a.com/symfony-2-0/symfony2-and-twig-pagination/
+  Updated by: Simon Schick <simonsimcity@gmail.com>
+
+  Parameters:
+    * currentFilters (array) : associative array that contains the current route-arguments
+    * currentPage (int) : the current page you are in
+    * paginationPath (string) : the route name to use for links
+    * showAlwaysFirstAndLast (bool) : Always show first and last link (just disabled)
+    * lastPage (int) : represents the total number of existing pages
 #}
-
 {% spaceless %}
-    {% if nbPages > 1 %}
+    {% if lastPage > 1 %}
 
-        {# Number of page around current page+1 #}
-        {% set nearbyPagesLimit = 4 %}
+        {# the number of first and last pages to be displayed #}
+        {% set extremePagesLimit = 3 %}
 
-        <div>
-            <ul class="pagination">
-                {% if currentPage != 1 %}
-                    <li>
-                        <a href="{{ path(url, { 'page': 1, 'q': query }) }}">First</a>
-                    </li>
-                {% endif %}
-                {% for i in 1..nbPages %}
-                    {% if 0 == (currentPage - nearbyPagesLimit) - loop.index %} {# dot before #}
-                        <li class="disabled"><a href="#">...</a></li>
-                    {% elseif 0 == (currentPage + nearbyPagesLimit) - loop.index %} {# dot after #}
-                        <li class="disabled"><a href="#">...</a></li>
-                    {% elseif 0 < (currentPage - nearbyPagesLimit) - loop.index %} {# hide all before #}
-                    {% elseif 0 > (currentPage + nearbyPagesLimit) - loop.index %} {# hide all after #}
-                    {% else %}
-                        <li {% if currentPage == loop.index  %} class="active"{% endif %}>
-                            <a href="{{ path(url, { 'page': loop.index, 'q': query }) }}">{{ loop.index }}</a>
-                        </li>
+        {# the number of pages that are displayed around the active page #}
+        {% set nearbyPagesLimit = 2 %}
+
+        <nav class="pagination">
+            <div class="numbers">
+                <ul>
+                    {% if currentPage > 1 %}
+                        <li><a href="{{ path(paginationPath, currentFilters|merge({page: currentPage-1})) }}">Previous</a></li>
+
+                        {% for i in range(1, extremePagesLimit) if ( i < currentPage - nearbyPagesLimit ) %}
+                            <li><a href="{{ path(paginationPath, currentFilters|merge({page: i})) }}">{{ i }}</a></li>
+                        {% endfor %}
+
+                        {% if extremePagesLimit + 1 < currentPage - nearbyPagesLimit %}
+                            <span class="sep-dots">...</span>
+                        {% endif %}
+
+                        {% for i in range(currentPage-nearbyPagesLimit, currentPage-1) if ( i > 0 ) %}
+                            <li><a href="{{ path(paginationPath, currentFilters|merge({page: i})) }}">{{ i }}</a></li>
+                        {% endfor %}
+                    {% elseif showAlwaysFirstAndLast %}
+                        <span class="disabled">Previous</span>
                     {% endif %}
-                {% endfor %}
-                {% if currentPage != nbPages %}
-                    <li>
-                        <a href="{{ path(url, { 'page': nbPages, 'q': query }) }}">Last</a>
-                    </li>
-                {% endif %}
-            </ul>
-        </div>
+
+                    <li class="current"><a href="{{ path(paginationPath, currentFilters|merge({ page: currentPage })) }}">{{ currentPage }}</a></li>
+
+                    {% if currentPage < lastPage %}
+                        {% for i in range(currentPage+1, currentPage + nearbyPagesLimit) if ( i <= lastPage ) %}
+                            <li><a href="{{ path(paginationPath, currentFilters|merge({page: i})) }}">{{ i }}</a></li>
+                        {% endfor %}
+
+                        {% if  (lastPage - extremePagesLimit) > (currentPage + nearbyPagesLimit) %}
+                            <li><span class="sep-dots">...</span></li>
+                        {% endif %}
+
+                        {% for i in range(lastPage - extremePagesLimit+1, lastPage) if ( i > currentPage + nearbyPagesLimit ) %}
+                            <li><a href="{{ path(paginationPath, currentFilters|merge({page: i})) }}">{{ i }}</a></li>
+                        {% endfor %}
+
+                        <li><a href="{{ path(paginationPath, currentFilters|merge({page: currentPage+1})) }}">Next</a></li>
+                    {% elseif showAlwaysFirstAndLast %}
+                        <li><span class="disabled">Next</span></li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
     {% endif %}
 {% endspaceless %}
