--- a/views/widgets/inc/pagination.html.twig
+++ b/views/widgets/inc/pagination.html.twig
@@ -18,11 +18,20 @@
         {# the number of pages that are displayed around the active page #}
         {% set nearbyPagesLimit = 2 %}
 
+
+            <ul class="pagination">
+                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
+
+
         <nav class="pagination">
-            <div class="numbers">
-                <ul>
+                <ul class="pagination">
                     {% if currentPage > 1 %}
-                        <li><a href="{{ path(paginationPath, currentFilters|merge({page: currentPage-1})) }}">Previous</a></li>
+                        <li class="page-item" ><a href="{{ path(paginationPath, currentFilters|merge({page: currentPage-1})) }}">Previous</a></li>
 
                         {% for i in range(1, extremePagesLimit) if ( i < currentPage - nearbyPagesLimit ) %}
                             <li><a href="{{ path(paginationPath, currentFilters|merge({page: i})) }}">{{ i }}</a></li>
@@ -33,33 +42,32 @@
                         {% endif %}
 
                         {% for i in range(currentPage-nearbyPagesLimit, currentPage-1) if ( i > 0 ) %}
-                            <li><a href="{{ path(paginationPath, currentFilters|merge({page: i})) }}">{{ i }}</a></li>
+                            <li class="page-item"><a href="{{ path(paginationPath, currentFilters|merge({page: i})) }}">{{ i }}</a></li>
                         {% endfor %}
                     {% elseif showAlwaysFirstAndLast %}
                         <span class="disabled">Previous</span>
                     {% endif %}
 
-                    <li class="current"><a href="{{ path(paginationPath, currentFilters|merge({ page: currentPage })) }}">{{ currentPage }}</a></li>
+                    <li class="page-item active"><a href="{{ path(paginationPath, currentFilters|merge({ page: currentPage })) }}">{{ currentPage }}</a></li>
 
                     {% if currentPage < lastPage %}
                         {% for i in range(currentPage+1, currentPage + nearbyPagesLimit) if ( i <= lastPage ) %}
-                            <li><a href="{{ path(paginationPath, currentFilters|merge({page: i})) }}">{{ i }}</a></li>
+                            <li class="page-item"><a href="{{ path(paginationPath, currentFilters|merge({page: i})) }}">{{ i }}</a></li>
                         {% endfor %}
 
                         {% if  (lastPage - extremePagesLimit) > (currentPage + nearbyPagesLimit) %}
-                            <li><span class="sep-dots">...</span></li>
+                            <li class="page-item"><span class="sep-dots">...</span></li>
                         {% endif %}
 
                         {% for i in range(lastPage - extremePagesLimit+1, lastPage) if ( i > currentPage + nearbyPagesLimit ) %}
-                            <li><a href="{{ path(paginationPath, currentFilters|merge({page: i})) }}">{{ i }}</a></li>
+                            <li class="page-item"><a href="{{ path(paginationPath, currentFilters|merge({page: i})) }}">{{ i }}</a></li>
                         {% endfor %}
 
-                        <li><a href="{{ path(paginationPath, currentFilters|merge({page: currentPage+1})) }}">Next</a></li>
+                        <li class="page-item"><a href="{{ path(paginationPath, currentFilters|merge({page: currentPage+1})) }}">Next</a></li>
                     {% elseif showAlwaysFirstAndLast %}
-                        <li><span class="disabled">Next</span></li>
+                        <li class="page-item"><span class="disabled">Next</span></li>
                     {% endif %}
                 </ul>
-            </div>
         </nav>
     {% endif %}
 {% endspaceless %}
